welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
	if ( 7 < hour < 20 )
                        ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( 7 < hour < 20 )
        ^